replaced junit 4.13.1 with junit-vintage-engine

--- a/pom.xml
+++ b/pom.xml
@@ -185,18 +185,6 @@
 			<version>${resteasyVersion}</version>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.easymock</groupId>
-			<artifactId>easymock</artifactId>
-			<version>3.0</version>
-		</dependency>
-
-		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
 			<version>${jettyVersion}</version>
@@ -256,8 +244,6 @@
 			<artifactId>google-oauth-client</artifactId>
 			<version>1.33.3</version>
 		</dependency>
-
-
 		<dependency>
 			<groupId>org.apache.maven.scm</groupId>
 			<artifactId>maven-scm-provider-gitexe</artifactId>
@@ -267,6 +253,19 @@
 			<groupId>org.apache.maven.scm</groupId>
 			<artifactId>maven-scm-provider-git-commons</artifactId>
 			<version>1.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<version>5.10.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>5.1.0</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
@@ -485,19 +484,19 @@
 					</excludes>
 				</configuration>
 			</plugin>
-                        <plugin>
-                            <groupId>org.jacoco</groupId>
-                            <artifactId>jacoco-maven-plugin</artifactId>
-                            <version>0.8.12</version>
-                            <executions>
-                                <execution>
-                                    <id>prepare-agent</id>
-                                    <goals>
-                                        <goal>prepare-agent</goal>
-                                    </goals>
-                                </execution>
-                            </executions>
-                        </plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>0.8.12</version>
+					<executions>
+						<execution>
+							<id>prepare-agent</id>
+							<goals>
+								<goal>prepare-agent</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
 
 		</plugins>
 	</build>
@@ -521,7 +520,6 @@
 		<swaggerVersion>2.2.21</swaggerVersion>
 		<jettyVersion>11.0.20</jettyVersion>
 		<resteasyVersion>6.2.8.Final</resteasyVersion>
-		<!-- <log4jVersion>2.8.2</log4jVersion> -->
 		<jacksonVersion>2.17.1</jacksonVersion>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
