--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,17 @@
 		</repository>
 	</repositories>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.junit</groupId>
+				<artifactId>junit-bom</artifactId>
+				<version>${junitVersion}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
 		<dependency>
             <groupId>io.swagger.core.v3</groupId>
@@ -255,9 +266,19 @@
 			<version>1.8.1</version>
 		</dependency>
 		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.junit.vintage</groupId>
 			<artifactId>junit-vintage-engine</artifactId>
-			<version>5.10.2</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -521,6 +542,7 @@
 		<jettyVersion>11.0.20</jettyVersion>
 		<resteasyVersion>6.2.8.Final</resteasyVersion>
 		<jacksonVersion>2.17.1</jacksonVersion>
+		<junitVersion>5.10.2</junitVersion>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
