--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,6 @@
             <artifactId>swagger-annotations-jakarta</artifactId>
             <version>${swaggerVersion}</version>
         </dependency>
-
 		<dependency>
 			<groupId>jakarta.xml.bind</groupId>
 			<artifactId>jakarta.xml.bind-api</artifactId>
@@ -96,7 +95,7 @@
 		<dependency>
 			<groupId>org.ndexbio</groupId>
 			<artifactId>ndex-object-model</artifactId>
-			<version>2.5.6</version>
+			<version>2.5.7-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
