--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,7 +37,6 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
     <display-name>NDEx RESTful API</display-name>
-
     <servlet>
         <servlet-name>Resteasy</servlet-name>
         <servlet-class>org.ndexbio.rest.NdexHttpServletDispatcher</servlet-class>
@@ -68,6 +67,10 @@
         <servlet-name>Resteasy</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>/swagger/*</url-pattern>
+	</servlet-mapping>
 
     <context-param>
         <param-name>resteasy.servlet.mapping.prefix</param-name>
